mob 90 without img

--- a/src/index.css
+++ b/src/index.css
@@ -733,6 +733,16 @@ body {
   list-style: none;
   display: flex; /* меню в один ряд */
 }
+.bottle-float-left.example-tree5-5 {
+  position: absolute;
+  margin-top: -9.95vw;
+  margin-left: 24.33vw;
+  width: 6.53vw;
+  height: auto;
+  z-index: 4;
+  animation: sbs-231425214 15s infinite linear;
+  backface-visibility: hidden;
+}
 
 .main-menu li {
   font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
@@ -1274,7 +1284,7 @@ body {
 }
 .register-inputs-text.code-left {
   text-align: center;
-  color: rgba(0, 98, 65, 1);
+  color: rgba(255, 255, 255, 1);
   display: flex; /* Используем Flexbox */
   justify-content: center; /* Центрирование по горизонтали */
   align-items: center; /* Центрирование по вертикали */
@@ -5820,7 +5830,7 @@ cursor: pointer;
 
   .register-inputs-text.code-left {
     text-align: center;
-    color: rgba(0, 98, 65, 1);
+    color: rgba(255, 255, 255, 1);
     display: flex;
     justify-content: center;
     align-items: center;
