--- a/src/index.css
+++ b/src/index.css
@@ -1230,6 +1230,32 @@ body {
   font-weight: 400;
   line-height: 3.61vw;
 }
+.register-main-text.soon {
+  width: 34vw;
+  margin: 4vw 0vw 0vw 2vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  color: rgba(163, 212, 65, 1);
+  font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+  font-size: 2.78vw;
+  font-weight: 400;
+  line-height: 3.61vw;
+}
+.register-main-text.soon-white {
+  width: 35vw;
+  margin: 2vw 0vw 0vw 1.5vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  color: rgba(255, 255, 255, 1);
+  font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+  font-size: 6.52vw;
+  font-weight: 400;
+  line-height: 3.61vw;
+}
 .register-main-text.top-margin {
   margin-top: 12.5vw;
 }
@@ -1884,6 +1910,17 @@ height: auto;
 }
 .shadow-button-animation-text {
   display: none;
+}
+.blur-filter-test {
+  backdrop-filter: blur(10px); /* Размытие заднего фона */
+  width: 100%;
+  height: 100%;
+  transition: opacity 0.5s ease-in-out;
+  opacity: 1;
+}
+.blur-filter-test.hidden {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .absolute-text {
@@ -4130,6 +4167,19 @@ cursor: pointer;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
+#popup-content-soon{
+  left: 50%;
+  height: auto;
+  border-radius: 2.08vw;
+  padding: 1.6vw;
+  width: 40.42vw;
+  position: absolute;
+  overflow: hidden;
+
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
 .popup-content-code {
   background-color: rgba(0, 98, 65, 1);
   border-radius: 1.83vw;
@@ -4144,6 +4194,19 @@ cursor: pointer;
 }
 .popup {
   background-color: rgba(0, 0, 0, .5);
+  display: none;
+  height: 100%;
+  left: 0;
+  opacity: 1;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  transition: opacity .5s ease-in-out;
+  width: 100%;
+  z-index: 9999;
+}
+.popup-soon {
+  background-color: rgba(57, 99, 85, 0.35) !important;
   display: none;
   height: 100%;
   left: 0;
@@ -5718,6 +5781,26 @@ cursor: pointer;
     /*scrollbar-width: thin;*/
     /*scrollbar-color: gray lightgray;*/
   }
+  #popup-content-soon {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+  }
+  #popup-content-soon {
+    /* background-color: #FFFFFF4D; */
+    width: 73.69vw;
+    height: auto;
+    padding: 2.6vw 6.94vw;
+    border-radius: 4.83vw;
+    margin-top: 1vw;
+    /* scrollbar-width: thin; */
+    /* scrollbar-color: gray lightgray; */
+  }
+
+
+
   .register-inputs {
     border: 1px white solid;
     color: rgba(0, 98, 65, 1);
@@ -5763,6 +5846,32 @@ cursor: pointer;
     height: auto;
     z-index: 5;
     transition: opacity 0.3s ease;
+  }
+  .register-main-text.soon {
+    width: 53vw;
+    margin: 7vw 0vw 0vw 2vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    color: rgba(163, 212, 65, 1);
+    font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+    font-size: 6.78vw;
+    font-weight: 400;
+    line-height: 6.61vw;
+  }
+  .register-main-text.soon-white {
+    width: 62vw;
+    margin: 6vw 0vw 7vw -2.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    color: rgba(255, 255, 255, 1);
+    font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+    font-size: 11.52vw;
+    font-weight: 400;
+    line-height: 6.61vw;
   }
   .bottle-float-left.email-remember {
     margin: -15.2vw 0vw 0vw 35vw;
