--- a/src/index.css
+++ b/src/index.css
@@ -6203,7 +6203,7 @@ cursor: pointer;
   }
   .text-block-inputcode {
     display: block;
-    margin: 67vw 0vw 0vw -55vw;
+    margin: 71vw 0vw 0vw -55vw;
   }
   .absolute-text-mobile.bon5 {
     z-index: 5;
@@ -6390,6 +6390,189 @@ cursor: pointer;
     z-index: 1;
     width: 39.75vw;
     height: auto;
+  }
+
+
+  .left.lc {
+    display: flex;
+    flex-direction: column;
+    margin: -163.5vw 0vw 0vw 5.5vw;
+  }
+  .winners-text.lc {
+    z-index: 5;
+    width: 50vw;
+    margin-top: 8.5vw;
+    margin-left: 32.4vw;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 6.47vw;
+    line-height: 6.31vw;
+    color: #EEF3EC;
+    font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+    text-align: center;
+    color: rgba(255, 255, 255, 1);
+  }
+  .for-faq.lc {
+    color: rgba(0, 98, 65, 1);
+    margin-left: 22.5vw;
+    margin-top: 6.4vw;
+  }
+  .bottle-float-left.exit-lc-text {
+    margin: -7vw 0vw 0vw 60vw;
+    font-size: 3.39vw;
+    line-height: 5.67vw;
+    position: absolute;
+    width: 6.4vw;
+    height: 6.4vw;
+    z-index: 5;
+    transition: opacity 0.3s ease;
+  }
+  .bottle-float-left.exit-lc {
+    margin: -13vw 0vw 0vw 37vw;
+    position: absolute;
+    width: 6.4vw;
+    height: 6.4vw;
+    z-index: 5;
+    transition: opacity 0.3s ease;
+  }
+  .left-p-name.lc {
+    margin: 4.35vw 0vw -1vw 5.4vw;
+    font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+    font-weight: 400;
+    font-size: 5vw;
+    line-height: 6.13vw;
+    text-transform: uppercase;
+    color: rgba(0, 98, 65, 1);
+  }
+  .slider-codes-winnersall {
+    padding: 4.8vw 5.5vw 4.79vw 5.8vw;
+    margin: 0vw 0vw 0vw 0vw;
+    border-radius: 4.04vw;
+    color: rgba(0, 98, 65, 1);
+    font-family: 'Acrom Medium', Inter, sans-serif;
+    font-weight: 500;
+    font-size: 4.25vw;
+    line-height: 3.53vw;
+    background-color: white;
+  }
+  .slick-slider.winnersSearchCodes {
+    width: 48.57vw;
+    height: 4.17vw;
+    margin-left: 5.5vw;
+    margin-top: 3vw;
+  }
+  .winnersSearchCodes .slick-prev, .winnersSearchCodes .slick-next {
+    margin-top: -0.5vw !important;
+    margin-left: -14vw;
+  }
+  .winnersSearchCodes .slick-next {
+    margin-right: -8.1vw;
+  }
+  .right-p-name.lc {
+    width: 64vw;
+    margin: -56.65vw 0vw -3vw -0.8vw;
+    font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+    font-weight: 400;
+    font-size: 5vw;
+    line-height: 6vw;
+    text-transform: uppercase;
+    color: rgba(0, 98, 65, 1);
+  }
+  input.profile-mobile {
+    font-family: Inter;
+    width: 57.56vw;
+    height: 14.1vw;
+    border: 0.14vw solid red;
+    border-radius: 6.68vw;
+    padding: 0.35vw;
+    font-size: 1.11vw;
+    margin-top: 5.1vw;
+    margin-left: -6.2vw;
+    text-align: center;
+    outline: none;
+    transition: border-color 0.2s, box-shadow 0.2s;
+    z-index: 5;
+    position: absolute;
+}
+  .bottle-float-left.profile-mobile {
+    position: absolute;
+    margin-top: 5.1vw;
+    margin-left: -35.97vw;
+    width: 46.81vw;
+    height: 14.27vw;
+    z-index: 6;
+  }
+  .text-inputcode.lc {
+    color: rgba(0, 98, 65, 1);
+    margin: 22vw 0vw 0vw -25vw;
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 3.25vw;
+    line-height: 3.18vw;
+    text-transform: none;
+  }
+  .winners-text.lc-text-profile {
+    margin-top: -85.8vw;
+  }
+  .lc-text-profile-d {
+    margin: -1.2vw 0vw 0vw 6.5vw;
+    width: 64.76vw;
+    height: 4.31vw;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 6.47vw;
+    line-height: 6.31vw;
+    font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
+    color: rgba(0, 98, 65, 1);
+  }
+  .lc-text-profile-d-down {
+    margin: 12.8vw 0vw 6vw 12.6vw;
+    width: 55.49vw;
+    height: 7.50vw;
+    text-transform: none;
+    text-align: center;
+    font-weight: 400;
+    font-size: 3.08vw;
+    line-height: 3.5vw;
+    font-family: Inter;
+    color: rgba(0, 98, 65, 1);
+  }
+  .bottle-float-left.example-tree5.profile {
+    z-index: -1;
+    margin-top: -35.95vw;
+    margin-left: 85.13vw;
+    width: 15.19vw;
+    height: 15.89vw;
+  }
+  .text-inputcode.profile-mobile {
+    position: absolute;
+    width: 62vw;
+    margin: -3vw 0vw 0vw 3vw;
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 3.47vw;
+    line-height: 3.27vw;
+    text-transform: none;
+  }
+  .text-inputcode.cards-prize {
+    font-size: 5.47vw;
+    margin-top: 2.5vw;
+    margin-left: 2vw;
+    margin-bottom: 5vw;
+    font-family: AutumnSweaterLaimon;
+  }
+  .accordion-example.lc {
+    padding-top: 0vw;
+    position: relative;
+    z-index: 1;
+    padding-bottom: 9vw;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    background-color: inherit;
+    width: 100%;
+    font-size: 0.83vw;
   }
 
 
