--- a/src/index.css
+++ b/src/index.css
@@ -3552,8 +3552,7 @@ backface-visibility: hidden;
   width: 23.4375vw;
 }
 .winners-tabs-content {
-  /*margin-bottom: 18vw;*/
-  /*padding-top: 1.56vw;*/
+  height:auto;
 }
 .winners-tabs-content-ticket {
   margin-left: 3.2vw;
@@ -5399,7 +5398,7 @@ cursor: pointer;
   .accordion-example {
     position: relative;
     z-index: 1;
-    padding-top: 41vw;
+    padding-top: 50vw;
     padding-bottom: 0vw;
     /* overflow: hidden; */
     justify-content: center;
@@ -6150,7 +6149,7 @@ cursor: pointer;
   .bottle-float-left-mobile-gps.bon9 {
     display: flex;
     position: absolute;
-    margin-top: 149.9vw;
+    margin-top: 140.9vw;
     margin-left: 86.43vw;
     width: 5.47vw;
     height: auto;
@@ -6272,8 +6271,15 @@ cursor: pointer;
     font-weight: 700;
     line-height: 2.08vw;
     position: absolute;
-    margin-top: 159.9vw;
+    margin-top: 150.9vw;
     margin-left: 81.43vw;
+  }
+  #wave-container-test-4 {
+    margin-top: 34vw;
+    width: 100%;
+    height: 5.21vw;
+    overflow: hidden;
+    background: rgba(0, 98, 65, 1);
   }
   .absolute-text-mobile.bon4 {
     z-index: 5;
